# money-server

./: Cargo.toml  build.rs
api/money/: money_v1.proto
migrations/: .keep
migrations/2023-11-27-075141_create_users/: up.sql
migrations/2023-11-27-095102_add_columns_into_users/: down.sql  up.sql
src/: main.rs  my_money_server.rs  schema.rs  storage.rs
src/storage/: auth.rs  data.rs  models.rs  schema.rs
