[package]
name = "money-server"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.8.5"
tonic = "0.10.2" # Rust gRPC implementation
prost = "0.12.2" # Rust Protocol Buffers implementation
prost-types = "0.12.2" # Contains definitions of Protocol Buffers well-known types
tokio={version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
dotenv="0.15.0"
env_logger = "0.10.1"
log="0.4.20"
persistence="0.0.6"
clap = { version = "4.4.8", features = ["derive"] }
sqlx="0.7.2"
diesel ={ version = "2.1.4", features = ["postgres", "r2d2", "numeric", "chrono"] }
# tokio = {version="1.34.0",features = ["stream", "macros"]}
[build-dependencies]
tonic-build = "0.10.2"